# Ros-Semantic-Segmentation_Modificado

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/autosense_msgs/: TrackingObjectArray.h
devel/lib/pkgconfig/: common_lib.pc  object_builders_lib.pc  roi_filters_lib.pc  segmenters_lib.pc  semantic_segmentation.pc
devel/lib/semantic_segmentation/: segmentation_node
devel/share/autosense_msgs/cmake/: autosense_msgs-msg-paths.cmake
devel/share/common_lib/cmake/: common_libConfig.cmake
devel/share/object_builders_lib/cmake/: object_builders_libConfig.cmake
devel/share/roi_filters_lib/cmake/: roi_filters_libConfig.cmake
devel/share/segmenters_lib/cmake/: segmenters_libConfig.cmake
devel/share/semantic_segmentation/cmake/: semantic_segmentationConfig.cmake
src/ros-semantic-segmentation/semantic_segmentation/: CMakeLists.txt
src/ros-semantic-segmentation/semantic_segmentation/nodes/: test_publisher.py
src/ros-semantic-segmentation/semantic_segmentation/nodes/models/mnv2_bdd100k_driveable_513/: categories.json
src/ros-semantic-segmentation/semantic_segmentation/nodes/models/mnv2_coco2017_driving_513/: __init__.py
